--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.4.6)
 include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 rosbuild_init(segway_apox)
 rosbuild_genmsg()
-rosbuild_add_library(segway_apox segway_apox.cpp) # usbcan.c serial.c)
+rosbuild_add_library(segway_apox segway_apox.cpp) # canio_kvaser.cc)
 
 rosbuild_add_executable(print_encoders print_encoders.cpp)
 target_link_libraries(print_encoders segway_apox)
